--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,251 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
+}
+.btn-right{
+    border-radius: 20px;
+    color: white;
+    background-color:#7b3fe4;
+    padding: 8px 20px;
+}
+.navbar{
+    height: 100px;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 100;
+   
+}
+.nav-link{
+    margin-left: 10px;
+    color:#292934;
+}
+#banner{
+    background-image: linear-gradient(to bottom, #cf94ff, #d9d0fb, #f4ebff);
+}
+#banner h1{
+    font-size: 72px;
+    
+    font-weight:900;
+    letter-spacing:1px;
+}
+#banner .text{
+    font-size:20px;
+}
+
+.card-section{
+    margin-top:100px;
+    margin-bottom:100px;
+}
+.card{
+    border-radius: 5px;
+}
+.card-body{
+    padding-top:  40px;
+    padding-bottom: 40px;
+    height: 150px;
+
+}
+.card-body span{
+    color:#7b3fe4;
+    font-weight:700;
+   
+}
+
+.card-body i{
+    display:block;
+    position: relative;
+    left:350px;
+    bottom:20px;
+}
+.card-text{
+    display: inline-block;
+    width:65%;
+    margin-top:-40px;
+    font-size: 20px;
+    text-decoration: none;
+    color: #000;
+}
+.card-text:hover{
+    color:#000;
+    cursor: pointer;
+}
+
+
+#built-by-developer .container{
+    background-color: #7b3fe4;
+    border-radius: 10px;
+    margin: 6em auto;
+    color: white;
+    overflow-x:hidden;
+}
+#built-by-developer .container h2{
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+.rounded-check{
+    list-style-type: none;
+    padding:0;
+    
+}
+.rounded-check li{
+    margin-bottom: 10px;
+}
+ .bi-check-circle-fill{
+    color:#cf94ff;
+    font-size: 20px;
+}
+#built-by-developer .btn{
+    background-color:white;
+    margin-top: 30px;
+    border-radius: 20px;  
+}
+
+.right-img img{
+    max-width: 80%;
+    height: 90%;
+}
+
+#built-by-developer .dApps{
+    background-color:white;
+    color:#000;
+    box-shadow:2px 2px 2px 2px rgba(0, 0, 0, 0.1);
+}
+.dApps-right-img{
+    background-image: url("../images/dapps_b2f1f654fa.png");
+    background-repeat: no-repeat;
+    background-position:center;
+    background-size: cover;
+}
+#built-by-developer .btn{
+    background-color: #7b3fe4;
+    color: white;
+}
+.dApps-right-img{
+    justify-content: center;
+    align-items: center;
+}
+.transparent-button{
+  background-color:rgb(237, 244, 245);
+   height:35%;
+   position: relative;
+  border-radius: 50px;
+  width:40%;
+}
+.transparent-button .btn{
+    padding: 10px;
+}
+#scaling-solutions h2{
+    font-size:48px;
+    font-weight:700;
+    color:#292934;
+    margin-bottom:12px;
+}
+#scaling-solutions .suporting-text{
+    font-size:20px;
+    font-weight:600;
+    color:#52525D;
+    margin-bottom:40px;
+}
+.scaling-soln-card{
+    height: 350px;
+    text-align: left;
+}
+.scaling-soln-card img{
+    width:48px;
+    height:48px;
+    display: block;
+    margin-bottom: -25px;
+    margin-left:15px;
+}
+.scaling-soln-card a{
+    display: block;
+    width:18%;
+    background-color:#EAE0FB;
+    color:#7b3fe4;
+    height: 28px;
+    font-size: 12px;
+    margin-top: 30px;
+}
+.scaling-soln-card h5{
+    font-size:20px;
+    font-weight:700;
+}
+.scaling-soln-card .card-text{
+    font-size:16px;
+    width:80%;
+}
+.scaling-soln-card:hover{
+    background-color:#EAE0FB;
+    border:1px solid #7b3fe4;
+}
+.col-md-3{
+    margin: 0 !important;
+    padding:0 !important;
+}
+.scaling-soln-card{
+    border-radius: 0px;
+}
+.scaling-soln-card .devt-btn{
+    color: #FE943A;
+    background-color:#FEEEDF;
+    width:120px;
+
+}
+#Accessibility{
+    margin-top: 100px;
+    margin-bottom:100px;
+}
+
+#Accessibility img{
+    width: 62px;
+    height: 62px;
+    margin-bottom: 32px;
+}
+#Accessibility h5{
+    margin-bottom: 12px;
+    color:#0A0A0D;
+    font-size: 24px;
+    font-weight:700;
+}
+#Accessibility h2{
+    margin-bottom: 48px;
+    color:#292934;
+    font-size: 48px;
+    font-weight:700;
+}
+.card-body-text{
+    font-size:16px;
+    padding-right: 10px;
+    
+}
+#green-polygon .container{
+    background-color: #193d45;
+    border-radius: 10px;
+    color: white;
+    
+}
+#green-polygon .col-left{
+    padding: 48px;
+}
+
+#green-polygon a{
+    background-color:white;
+    border-radius: 20px;
+    display: inline-block;
+    color: #292934;
+    margin-top: 20px;
+}
+#green-polygon h3{
+    font-size:32px;
+    font-weight:700;
+}
+#green-polygon .green-text{
+   margin: 8px 0px 40px 0px;;
+}
+#green-polygon img{
+    width: 90%;
+    height: 300px;
+
 }
